Add upated notes

--- a/Notes.html
+++ b/Notes.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
 			<title>📚Learning programming📚</title>
     </head>
     <body>
 			<nav id="navigation">
-				<lable for="navigation">Navigation</lable>
+				<h3>Navigation</h3>
 				<ul>
-					<a href="#helpful links"><li>Helpful links</li></a>
-					<a href="#notes"><li>Notes</li></a>
-					<a href=""><li></li></a>
+					<li><a href="#helpful_links">Helpful links</a></li>
+					<li><a href="#notes">Notes</a></li>
+					<li><a href=""></a></li>
 				</ul>
 			</nav>
 			<header>
 				<figure>
-					<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0"><img src="https://avatars0.githubusercontent.com/
-						u/69824235?s=460&u=aaa3c194316da0b798d51992f8c641cfb7a8603f&v=4" length="225" height="225" alt="Pic of me"></a>
+					<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0"><img src="https://avatars0.githubusercontent.com/u/69824235?s=460&u=aaa3c194316da0b798d51992f8c641cfb7a8603f&v=4" width="225" height="225" alt="Pic of me"></a>
 					<figcaption>😊</figcaption>
 				</figure>
 				<h1>Intoduction to programming notes</h1>
 			</header>
 			<main>
-				<section id="helpful links">
-					<label for="links">Helpful Links</label>
+				<section id="helpful_links">
+					<h3>Helpful Links</h3>
 					<ul>
-						<a href="https://htmlcheatsheet.com/" target="_blank"><li>HTML Cheatsheet</li></a>
-						<a href="https://developer.mozilla.org/en-US/" target="_blank"><li>Mozilla Developer Network</li></a>
-						<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Block-level_elements#Elements" target="_blank"><li>Block-level elements (reference)</li></a>
-						<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Inline_elements#Elements" target="_blank"><li>Inline elements (reference)</li></a>
-						<a href="https://picsum.photos/" target="_blank"><li>Lorem Picsum (image placeholder)</li></a>
-						<a href=""><li></li></a>
+						<li><a href="https://htmlcheatsheet.com/" target="_blank">HTML Cheatsheet</a></li>
+					  <li><a href="https://developer.mozilla.org/en-US/" target="_blank">Mozilla Developer Network</a></li>
+					  <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Block-level_elements#Elements" target="_blank">Block-level elements (reference)</a></li>
+						<li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Inline_elements#Elements" target="_blank">Inline elements (reference)</a></li>
+						<li><a href="https://picsum.photos/" target="_blank">Lorem Picsum (image placeholder)</a></li>
+						<li><a href="https://validator.w3.org/">HTML validator</a></li>
+						<li><a href=""></a></li>
 					</ul>
 				</section>
 				<article id="notes" class="notes"><!-- Notes start here -->
@@ -66,11 +66,11 @@
 						<br>
 						<article class="headings"><!-- headings notes -->
 							<header>
-								<h3>Heading practice:</h>
+								<h3>Heading practice:</h3>
 							</header>
 							<section class="headings_example">
 								<article class="example1"><!-- example 1  -->
-									<p><h4>example 1:</h4></p>
+									<h4>example 1:</h4>
 									<h1>My HTML Notes</h1>
 									<p>This page is a collection of my awesome notes about HTML!</p>
 									<h2>The Web</h2>
@@ -79,11 +79,11 @@
 									<p>HTML stands for Hypertext Markup Language. It's used to define the structure or layout of a web page.</p>
 								</article>
 								<article class="example2"><!-- example 2  -->
-								<p><h4>example 2:</h4></p>
-								<h1>My chemistry notes</h1>
-								<p><strong>Molecule name:</strong> <em>Sulfur hexafluoride<em></p> 
-  							<p><strong>Molecular formula:</strong> C<sub>6</sub>H<sub>12</sub>O<sub>6</sub></p>
-								<p><strong>Note:</strong> This gas has a much higher density than air. Basically the opposite of helium. <mark>Crazy!</mark></p>
+									<h4>example 2:</h4>
+									<h1>My chemistry notes</h1>
+									<p><strong>Molecule name:</strong> <em>Sulfur hexafluoride</em></p> 
+									<p><strong>Molecular formula:</strong> C<sub>6</sub>H<sub>12</sub>O<sub>6</sub></p>
+									<p><strong>Note:</strong> This gas has a much higher density than air. Basically the opposite of helium. <mark>Crazy!</mark></p>
 							  </article>	
 							</section>	
 							<footer>
@@ -110,9 +110,8 @@
 											<li>air</li>
 											<li>plant</li>
 										</ol>
-									<li>cream</li>
-									<li>salid</li> 
-									</li>
+										<li>cream</li>
+										<li>salad</li> 
 								</ul>
 								<ul>
 									<li>Mammals
@@ -163,6 +162,24 @@
 							</footer>
 						</article>
 						<br>
+						<article class="elements_review"><!-- Elements Review -->
+							<header>
+								<h3>Elements review:</h3>
+							</header>
+							<section class="elements_test">
+								<p>Here is the test for elements the section.</p>
+								<ol>
+									<li><a href="https://en.wikipedia.org/wiki/Bear" target="_blank">Bears</a>
+									<li><a href="https://en.wikipedia.org/wiki/Kitten" target="_blank">Kittens</a>
+								</ol>
+								<img src="https://placebear.com/150/150" alt="bear">
+								<img src="https://placekitten.com/150/150" alt="kitty">
+							</section>
+							<footer>
+								<p>I liked working with the elements and learning how to use them.</p>
+							</footer>
+						</article>
+						<br>
 						<article class=""><!-- notes -->
 							<header>
 								<h3></h3>
@@ -175,6 +192,7 @@
 							</footer>
 						</article>
 						<br>
+					</section>
 						
 						
 				</article>
