Add class notes

--- a/Notes.html
+++ b/Notes.html
@@ -2,6 +2,13 @@
 <html lang="en">
     <head>
 			<title>📚Learning programming📚</title>
+			<style>
+				article h1 {font-size:32px; margin-top:21.44px; margin-bottom:21.44px;}
+				strong {color:#00006B;}
+				body {background-color: #F7F8FF; font-family: Rubik, Arial;}
+				.footer {position: fixed; left: 0; bottom: 0; width: 100%; text-align: center; background-color: #F7F8FF; }
+
+			</style>
     </head>
     <body>
 			<nav id="navigation">
@@ -17,7 +24,7 @@
 					<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0"><img src="https://avatars0.githubusercontent.com/u/69824235?s=460&u=aaa3c194316da0b798d51992f8c641cfb7a8603f&v=4" width="225" height="225" alt="Pic of me"></a>
 					<figcaption>😊</figcaption>
 				</figure>
-				<h1>Intoduction to programming notes</h1>
+				<h1>Introduction to programming notes</h1>
 			</header>
 			<main>
 				<section id="helpful_links">
@@ -36,12 +43,12 @@
 					<header>
 						<h2>HTML Notes:</h2>
 					</header>
-					<section class="class_notes">
+					<section class="">
 						<article class="markup"><!-- Markup notes -->
 							<header>
 								<h3>Markup:</h3>
 							</header>	
-							<section class="markup_example">
+							<section class="">
 								<p>Markup is used to tell a browser what to do with the text in an HTML document. 
 									We can use keywords as tags to create elements that will have an outcome based on 
 									what the keyword does. Like (strong) makes things <strong>bold</strong> and (em) 
@@ -52,11 +59,11 @@
 							</footer>
 						</article>
 						<br>
-						<article class="elements"><!-- elements notes -->
+						<article class=""><!-- elements notes -->
 							<header>
 								<h3>Lots of elements:</h3>
 							</header>
-							<section class="elements_example">
+							<section class="">
 							<p>There are a lot of elements to try out and use. They can do things like <mark>highlight</mark> words, move them <sub>down</sub>, and move them <sup>up</sup>.</p>
 							</section>
 							<footer>
@@ -64,13 +71,13 @@
 							</footer>
 						</article>
 						<br>
-						<article class="headings"><!-- headings notes -->
+						<article class=""><!-- headings notes -->
 							<header>
 								<h3>Heading practice:</h3>
 							</header>
-							<section class="headings_example">
-								<article class="example1"><!-- example 1  -->
-									<h4>example 1:</h4>
+							<section class="">
+								<article class=""><!-- example 1  -->
+									<h4>(example 1)</h4>
 									<h1>My HTML Notes</h1>
 									<p>This page is a collection of my awesome notes about HTML!</p>
 									<h2>The Web</h2>
@@ -78,8 +85,8 @@
 									<h2>What is HTML?</h2>
 									<p>HTML stands for Hypertext Markup Language. It's used to define the structure or layout of a web page.</p>
 								</article>
-								<article class="example2"><!-- example 2  -->
-									<h4>example 2:</h4>
+								<article class=""><!-- example 2  -->
+									<h4>(example 2)</h4>
 									<h1>My chemistry notes</h1>
 									<p><strong>Molecule name:</strong> <em>Sulfur hexafluoride</em></p> 
 									<p><strong>Molecular formula:</strong> C<sub>6</sub>H<sub>12</sub>O<sub>6</sub></p>
@@ -91,15 +98,15 @@
 							</footer>
 						</article>
 						<br>
-						<article class="lists_and_closing_tags"><!-- Lists and closing tag notes -->
+						<article class=""><!-- Lists and closing tag notes -->
 							<header>
 								<h3>Lists and closing tags:</h3>
 							</header>
-							<section class="list_notes">
+							<section class="">
 								<p>A closing tag is optional for each list item, but not for the list as a whole. We must be sure to close the list as a whole. 
 									If we leave off, the browser will not know when our list ends. It will simply treat everything that comes after that point as part of the list.</p>
 							</section>
-							<section class="examples">
+							<section class="">
 								<header>
 									<h4>Random things (examples)</h4>
 								</header>
@@ -138,23 +145,23 @@
 							</footer>
 						</article>
 						<br>
-						<article class="links"><!-- Link notes -->
+						<article class=""><!-- Link notes -->
 							<header>
 								<h3>Links and the "a" tag:</h3>
 							</header>
-							<section class="link_notes">
+							<section class="">
 								<p>Check out this link to my <a href="http://briansegers.com/" target="_blank">3D art site</a> </p>
 							</section>
 							<footer>
-								<p>Lnking is such a useful tool. Easy too.</p>
+								<p>Links are such a useful tool. Easy to use too.</p>
 							</footer>
 						</article>
 						<br>
-						<article class="images"><!-- Image notes -->
+						<article class=""><!-- Image notes -->
 							<header>
 								<h3>Images:</h3>
 							</header>
-							<section class="image_notes">
+							<section class="">
 								<p>Check out my image at the <a href="#navigation">top</a>. I even wrapped it in a link!</p>
 							</section>
 							<footer>
@@ -162,11 +169,11 @@
 							</footer>
 						</article>
 						<br>
-						<article class="elements_review"><!-- Elements Review -->
+						<article class=""><!-- Elements Review -->
 							<header>
 								<h3>Elements review:</h3>
 							</header>
-							<section class="elements_test">
+							<section class="">
 								<p>Here is the test for the elements section.</p>
 								<ol>
 									<li><a href="https://en.wikipedia.org/wiki/Bear" target="_blank">Bears</a>
@@ -176,7 +183,7 @@
 								<img src="https://placekitten.com/150/150" alt="kitty">
 							</section>
 							<footer>
-								<p>I liked working with the elements and learning how to use them.</p>
+								<p>I liked working with elements and learning how to use them.</p>
 							</footer>
 						</article>
 						<br>
@@ -186,31 +193,133 @@
 					<header>
 						<h2>CSS Notes:</h2>
 					</header>
-					<section class="css_notes">
-						<article class=""><!-- notes -->
+					<section class="">
+						<article class=""><!-- Tree structure notes -->
 							<header>
-								<h3></h3>
+								<h3>Tree structures:</h3>
 							</header>
 							<section class="">
-								<p></p>
+								<h4>The rules for trees</h4>
+								<p>
+									<ol>
+										<li>The tree starts with a single node, the <strong>root</strong>, which has no incoming branches.</li>
+										<li>Each node can have <strong>branches</strong> to new nodes.</li>
+										<li>Each (non-root) node can have <strong>only one</strong> incoming branch.</li>
+									</ol>
+								</p>
+								<figure>
+									<img src="https://www.w3schools.com/js/pic_htmltree.gif" alt="tree structure diagram">
+								</figure>
 							</section>
 							<footer>
-								<p></p>
+								<p>The browser reads the HTML document and turns it into a tree structure. 
+									Every element that appears on the page gets laid out into a box, and 
+									these boxes land inside of other boxes. The layout of these boxes are 
+									controlled by the tree structure with a little help from the CSS.</p>
 							</footer>
 						</article>
 						<br>
+						<article class=""><!-- Styling HTML directly notes -->
+							<header>
+								<h3>Styling HTML directly:</h3>
+							</header>
+							<section class="">
+								<h4>Two ways to apply style to HTML elements</h4>
+								<p>
+									<ol>
+										<li>The first way is to use the [style] <strong>attribute</strong> to apply style directly to an HTML element.</li>
+										<li>The second way is to use the [style] <strong>element</strong> along with a <em>ruleset</em>.</li>
+									</ol>
+								</p>
+								<h4>Examles of being applied directly</h4>
+								<p style="color: red;">Make me red!</p>
+								<p style="color: green;">Make me green!</p>
+								<p style="color: blue;">Make me blue!</p>
+								<br>
+								<p style="text-align: center;">This is a haiku</p>
+								<p style="text-align:center;" >So I want each line centered</p>
+								<p style="text-align: center;" >Let’s make it stylish</p>
+							</section>
+							<footer>
+								<p>
+									when styles are applied directly to an HTML element using the [style] <strong>attribute</strong>, these are called <strong>inline</strong> styles.<br><br>
+									The idea is that the style is being applied directly <em>in the same line</em> as the HTML element that it is styling. 
+									(In contrast, when we use the [style] <strong>element</strong>, the style is separated—it's not in the same line.)
+								</p>
+							</footer>
+						</article>
+						<br>
+						<article class=""><!-- Vocabulary review notes -->
+							<header>
+								<h3>Vocabulary review:</h3>
+							</header>
+							<section class="">
+								<h4>Here are some important CSS terms that i have learned so far</h4>
+								<p>
+									<ul>
+										<li><strong>DOM</strong>, or Document Object Model, is a tree structure with a node for each HTML element, piece of text, image, and any other object in the web page.</li>
+										<li><strong>Selectors</strong> are one part of the CSS ruleset. They indicate which HTML element(s) the rule is for.</li>
+										<li><strong>Declaration</strong> blocks are the other part of the CSS ruleset, they say how the rule will modify the elements indicated by selectors.</li>
+										<li>CSS <strong>rules</strong> are composed of a selector followed by a declaration block.</li>
+										<li><strong>type</strong> is the simplest kind of selector. It indicates the name of one type of HTML element (such as [em] or [li]).</li>
+										<li><strong>class</strong> in HTML is an attribute that groups elements together that you want to have the same style.</li>
+										<li><strong>id</strong> is an attribute that must be unique to a single element, used to identify it.</li>
+									</ul>
+								</p>
+							</section>
+							<footer>
+								<p>It is interesting to see the difference between CSS and HTML. They really are different.</p>
+							</footer>
+						</article>
+						<br>
+						<article class=""><!-- Selector review notes -->
+							<header>
+								<h3>Selectors review</h3>
+							</header>
+							<section class="">
+								<p>
+									<ul>
+										<li><strong>Type</strong> selectors are used to apply a style to a particular type of HTML element, 
+											like <mark>[h1]</mark> or <mark>[body]</mark>. Type selectors are written using just the type name.</li>
+										<li><strong>Class</strong> selectors are used to set the style for multiple HTML elements that have a particular
+											 value for the <mark>[class]</mark> attribute. You can name a class anything you want! Class selectors are
+											  written with a dot before the class: for elements such as <mark>[p class="blue"]</mark>, the class selector is <mark>[.blue]</mark>.</li>
+										<li><strong>ID</strong> selectors are used when the style is being applied to one HTML element, which has to have an <mark>[id]</mark> attribute. 
+											There can be only one element with a particular <mark>[id]</mark> on a page. You can also choose any name you want for an <mark>[id]</mark>, 
+											just like a <mark>[class]</mark>. ID selectors are written using a <mark>[#]</mark> sign: for an element such as <mark>[div id="sidebar"]</mark>, the <mark>[id]</mark> selector is <mark>[#sidebar]</mark>.</li>
+									</ul>
+								</p>
+							</section>
+							<footer>
+								<p>I have learned about three kinds of CSS selectors: type, class, and ID!</p>
+							</footer>
+						</article>
+						<br>
+					</article>
+					<br>
+					<article class=""><!-- notes -->
+						<header>
+							<h3></h3>
+						</header>
+						<section class="">
+							<p></p>
+						</section>
+						<footer>
+							<p></p>
+						</footer>
+					</article>
+					<br>
 
 					</section>
 				<br>
 				
 			</main>
 			<br>
-			<aside>
-
-			</aside>
 			<br>
 			<hr>
-			<footer>
+			<footer class="footer"><!-- Page Footer -->
+				<hr>
+				<p><a href="#navigation">Top of the page</a></p>
 				<p><strong>email</strong>: briansegs@gmail.com | <strong>GitHub</strong>: <a href="https://github.com/briansegs" target="_blank">My Commits</a> | <strong>Website</strong>: <a href="https://briansegers.com/" target="_blank">My 3D Art</a>
 			</footer>
 		
