Add Notes style sheet

--- a/Notes.html
+++ b/Notes.html
@@ -2,15 +2,7 @@
 <html lang="en">
     <head>
 			<title>📚Learning programming📚</title>
-			<style>
-				article h1 {font-size:32px; margin-top:21.44px; margin-bottom:21.44px;}
-				strong {color:#00006B;}
-				body {background-color: #F7F8FF; font-family: Rubik, Arial;  }
-				.main {width: 80%;}
-				.footer {position: fixed; left: 0; bottom: 0; width: 100%; text-align: center; background-color: #F7F8FF; }
-				em {color:#E80055}
-
-			</style>
+			<link rel="stylesheet" href="Notes_Style.css">
     </head>
     <body>
 			<nav id="navigation">
