Add class notes

--- a/Notes.html
+++ b/Notes.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
 			<title>📚Learning programming📚</title>
+			<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 			<link rel="stylesheet" href="Notes_Style.css">
     </head>
     <body>
@@ -31,19 +32,23 @@
 						<li><a href="https://picsum.photos/" target="_blank">Lorem Picsum (image placeholder)</a></li>
 						<li><a href="https://validator.w3.org/" target="_blank">HTML validator</a></li>
 						<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference" target="_blank">CSS Reference</a></li>
-						<li><a href=""></a></li>
+						<li><a href="https://www.w3schools.com/colors/colors_picker.asp" target="_blank">Color picker</a></li>
+						<li><a href="https://developers.google.com/fonts/docs/getting_started" target="_blank">Documentation for Google Web Fonts</a></li>
+						<li><a href="https://fonts.google.com/">All available Google web fonts</a></li>
+						<li><a href="https://css-tricks.com/almanac/properties/f/font/" target="_blank">CSS font property(order)</a></li>
+						<li><a href="" target="_blank"></a></li>
 					</ul>
 				</section>
-				<article id="html" class="notes"><!-- HTML Notes start here -->
+				<article id="html"><!-- HTML Notes start here -->
 					<header>
-						<h2>HTML Notes:</h2>
+						<h2>HTML Notes</h2>
 					</header>
-					<section class="">
-						<article class="markup"><!-- Markup notes -->
+					<section class="notes">
+						<article><!-- Markup notes -->
 							<header>
 								<h3>Markup:</h3>
 							</header>	
-							<section class="">
+							<section class="notes">
 								<p>Markup is used to tell a browser what to do with the text in an HTML document. 
 									We can use keywords as tags to create elements that will have an outcome based on 
 									what the keyword does. Like (strong) makes things <strong>bold</strong> and (em) 
@@ -58,7 +63,7 @@
 							<header>
 								<h3>Lots of elements:</h3>
 							</header>
-							<section class="">
+							<section class="notes">
 							<p>There are a lot of elements to try out and use. They can do things like <mark>highlight</mark> words, move them <sub>down</sub>, and move them <sup>up</sup>.</p>
 							</section>
 							<footer>
@@ -70,7 +75,7 @@
 							<header>
 								<h3>Heading practice:</h3>
 							</header>
-							<section class="">
+							<section class="notes">
 								<article class=""><!-- example 1  -->
 									<h4>(example 1)</h4>
 									<h1>My HTML Notes</h1>
@@ -97,11 +102,11 @@
 							<header>
 								<h3>Lists and closing tags:</h3>
 							</header>
-							<section class="">
+							<section class="notes">
 								<p>A closing tag is optional for each list item, but not for the list as a whole. We must be sure to close the list as a whole. 
 									If we leave off, the browser will not know when our list ends. It will simply treat everything that comes after that point as part of the list.</p>
 							</section>
-							<section class="">
+							<section class="notes">
 								<header>
 									<h4>Random things (examples)</h4>
 								</header>
@@ -144,7 +149,7 @@
 							<header>
 								<h3>Links and the "a" tag:</h3>
 							</header>
-							<section class="">
+							<section class="notes">
 								<p>Check out this link to my <a href="http://briansegers.com/" target="_blank">3D art site</a> </p>
 							</section>
 							<footer>
@@ -156,7 +161,7 @@
 							<header>
 								<h3>Images:</h3>
 							</header>
-							<section class="">
+							<section class="notes">
 								<p>Check out my image at the <a href="#navigation">top</a>. I even wrapped it in a link!</p>
 							</section>
 							<footer>
@@ -168,7 +173,7 @@
 							<header>
 								<h3>Elements review:</h3>
 							</header>
-							<section class="">
+							<section class="notes">
 								<p>Here is the test for the elements section.</p>
 								<ol>
 									<li><a href="https://en.wikipedia.org/wiki/Bear" target="_blank">Bears</a>
@@ -184,16 +189,16 @@
 						<br>
 					</section>
 				</article>
-				<article id="css" class="notes"><!-- CSS Notes start here -->
+				<article id="css"><!-- CSS Notes start here -->
 					<header>
-						<h2>CSS Notes:</h2>
+						<h2>CSS Notes</h2>
 					</header>
-					<section class="">
+					<section class="notes">
 						<article class=""><!-- Tree structure notes -->
 							<header>
 								<h3>Tree structures:</h3>
 							</header>
-							<section class="">
+							<section class="notes">
 								<h4>The rules for trees</h4>
 								<p>
 									<ol>
@@ -218,7 +223,7 @@
 							<header>
 								<h3>Styling HTML directly:</h3>
 							</header>
-							<section class="">
+							<section class="notes">
 								<h4>Two ways to apply style to HTML elements</h4>
 								<p>
 									<ol>
@@ -248,7 +253,7 @@
 							<header>
 								<h3>Vocabulary review:</h3>
 							</header>
-							<section class="">
+							<section class="notes">
 								<h4>Here are some important CSS terms that i have learned so far</h4>
 								<p>
 									<ul>
@@ -271,7 +276,7 @@
 							<header>
 								<h3>Selectors review</h3>
 							</header>
-							<section class="">
+							<section class="notes">
 								<p>
 									<ul>
 										<li><strong>Type</strong> selectors are used to apply a style to a particular type of HTML element, 
@@ -296,7 +301,7 @@
 							<header>
 								<h3>Cascading and specificity</h3>
 							</header>
-							<section class="">
+							<section class="notes">
 								<p>The term "cascading" in <em>Cascading Style Sheets</em> refers to the way that style properties "cascade" down the DOM tree, 
 									starting at the top. A style applied to the [body] element will affect the entire document. A style applied to a 
 									lower-level element will affect that element and all its descendants.</p>
@@ -314,7 +319,7 @@
 							<header>
 								<h3>Exercise: Blue box</h3>
 							</header>
-							<section class="">
+							<section class="notes">
 								<style>
 									.box {
 										border: 10px solid blue; 
@@ -344,18 +349,145 @@
 						<br>
 						</article>
 						<br>
-						<article class=""><!-- notes -->
+						<article class=""><!-- Color notes -->
 							<header>
-								<h3></h3>
+								<h3>Color notes:</h3>
 							</header>
-							<section class="">
-								<p></p>
+							<section class="notes">
+								<p>
+									Kelly showed three different ways to represent color values in the code. For example:
+								</p>
+								<p>
+									<em>rgb(100%, 100%, 100%)<br>
+									rgb(255, 255, 255)<br>
+									#ffffff</em>
+								</p>
+									Although they look different on the surface, they all work essentially the same way.<br><br>
+									In all cases, we need to give the amount (or you could say the intensity) of each of the three primary colors: red, green, and blue (RGB).
+								<p>
+									We've been using the words "amount" and "intensity". What we really mean by this is the brightness of
+									the light. Higher values indicate brighter (more intense) light, and lower values indicate darker (less
+									intense) light.<br><br>
+									By mixing different levels of red, green, and blue, we can get different colors, at different levels of
+									brightness.<br><br>
+									By the way, this way of thinking about light isn't limited to our code—if we were to get real, physical
+									lights and overlap them, we would get similar results.
+								</p>
+								<figure style="text-align: center;">
+									<a href="https://commons.wikimedia.org/wiki/File:Additive_color_mixing_simulated.png" target="_blank">
+										<img src="https://video.udacity-data.com/topher/2018/July/5b43e2d4_additive-color-mixing-simulated/additive-color-mixing-simulated.png" width="50%" height="50%" alt="color mixing">
+									</a>
+									<figcaption>Red, green, and blue light overlap to create secondary colors and white light.</figcaption>
+								</figure>	
+								<p>
+									In the image above, notice that if we mix equal (and intense) levels of all three colors, we get white
+									light. And you can probably imagine that if we lowered the intensity of all three colors by equal
+									amounts, we would get various shades of gray.
+								</p>
 							</section>
 							<footer>
-								<p></p>
+								<p>Working with color mixing is a bit challenging but very powerful.</p>
 							</footer>
 						</article>
 						<br>
+						</article>
+						<br>
+						<article class=""><!-- Hexadecimal notes -->
+							<header>
+								<h3>Hexadecimal notes:</h3>
+							</header>
+							<section class="notes">
+								<p>
+									OK, but what about hex values, like <code>#00cc66</code> or <code>#99ccff</code> ?<br><br>
+									Hexadecimal is not as complex as it might appear. Instead of having 10 digits (0, 1, 2, 3, 4, 5, 6, 7, 8, 9),
+									hexadecimal has 16. Since we don't have 16 number symbols, hexadecimal counts up to 9 and then
+									starts using letters.<br><br>
+									Here is how we would show the numbers 0-15 in decimal and hexadecimal:
+								</p>
+								<table>
+									<thead>
+										<tr>
+											<th><strong>Decimal</strong></th>
+											<th>0</th>
+											<th>1</th>
+											<th>2</th>
+											<th>3</th>
+											<th>4</th>
+											<th>5</th>
+											<th>6</th>
+											<th>7</th>
+											<th>8</th>
+											<th>9</th>
+											<th><strong>10</strong></th>
+											<th><strong>11</strong></th>
+											<th><strong>12</strong></th>
+											<th><strong>13</strong></th>
+											<th><strong>14</strong></th>
+											<th><strong>15</strong></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td><strong>Hex</strong></td>
+											<td>0</td>
+											<td>1</td>
+											<td>2</td>
+											<td>3</td>
+											<td>4</td>
+											<td>5</td>
+											<td>6</td>
+											<td>7</td>
+											<td>8</td>
+											<td>9</td>
+											<td><strong>A</strong></td>
+											<td><strong>B</strong></td>
+											<td><strong>C</strong></td>
+											<td><strong>D</strong></td>
+											<td><strong>E</strong></td>
+											<td><strong>F</strong></td>
+										</tr>
+									</tbody>
+								</table>
+								<p>
+									Notice that it's the same until we get to <strong>10</strong>
+									, which is represented as <strong>A</strong> in hexadecimal.<br><br>
+									Like we mentioned, each pair of digits in a hex RGB value gives the 
+									intensity of red, green, or blue. This ranges from <code>00</code>, 
+									meaning zero intensity, to <code>ff</code>, meaning maximum intensity. 
+									In fact, the number <code>ff</code> is the same as the decimal number <code>255</code>.
+								</p>
+							</section>
+							<footer>
+								<p>If I need to find out what the hex value is for a particular color, I can easily find out by using the color picker link at the <a href="#top">top</a> of this page.</p>
+							</footer>
+						</article>
+						<br>
+					</article>
+					<br>
+					<article class=""><!-- notes -->
+						<header>
+							<h3></h3>
+						</header>
+						<section class="notes">
+							<p></p>
+						</section>
+						<footer>
+							<p></p>
+						</footer>
+					</article>
+					<br>
+					<article class=""><!-- notes -->
+						<header>
+							<h3></h3>
+						</header>
+						<section class="notes">
+							<p></p>
+						</section>
+						<footer>
+							<p></p>
+						</footer>
+					</article>
+					<br>
 
 					</section>
 				<br>
