Add class notes and class work

--- a/Notes.html
+++ b/Notes.html
@@ -34,8 +34,9 @@
 						<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference" target="_blank">CSS Reference</a></li>
 						<li><a href="https://www.w3schools.com/colors/colors_picker.asp" target="_blank">Color picker</a></li>
 						<li><a href="https://developers.google.com/fonts/docs/getting_started" target="_blank">Documentation for Google Web Fonts</a></li>
-						<li><a href="https://fonts.google.com/">All available Google web fonts</a></li>
+						<li><a href="https://fonts.google.com/" target="_blank">All available Google web fonts</a></li>
 						<li><a href="https://css-tricks.com/almanac/properties/f/font/" target="_blank">CSS font property(order)</a></li>
+						<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Using_CSS_flexible_boxes" target="_blank">Documentation for the flexible box layout (aka "flexbox")</a></li>
 						<li><a href="" target="_blank"></a></li>
 					</ul>
 				</section>
@@ -458,21 +459,32 @@
 								</p>
 							</section>
 							<footer>
-								<p>If I need to find out what the hex value is for a particular color, I can easily find out by using the color picker link at the <a href="#top">top</a> of this page.</p>
+								<p>If I need to find out what the hex value is for a particular color, I can easily find out by 
+									using the color picker link at the <a href="#top">top</a> of this page.</p>
 							</footer>
 						</article>
 						<br>
 					</article>
 					<br>
-					<article class=""><!-- notes -->
+					<article class=""><!-- Flexbox notes -->
 						<header>
-							<h3></h3>
+							<h3>Flexbox notes:</h3>
 						</header>
 						<section class="notes">
-							<p></p>
+							<p>
+								In the first exercise i had to replicate a checkerboard design.<br>
+								I was able to pull it off with just CSS. Check out the result <a href="Felx.html" target="_blank">here</a>.<br><br>
+								In the second exercise i was tasked with trying to replicate the design of a tic-tac-toe board shown in the image below.
+							</p>
+							<figure>
+								<img src="https://video.udacity-data.com/topher/2018/July/5b382108_tic-tac-toe/tic-tac-toe.png" alt="tictacktoe">
+							</figure>
+							<p>
+								Check out how i did <a href="ticktacktoe.html" target="_blank">here</a>.
+							</p>
 						</section>
 						<footer>
-							<p></p>
+							<p>I felt pretty challenged with these exercises but seeing myself complete them left me with a great feeling.</p>
 						</footer>
 					</article>
 					<br>
@@ -495,7 +507,7 @@
 			</main>
 			<br>
 			<br>
-			<hr>
+			
 			<footer class="footer"><!-- Page Footer -->
 				<hr>
 				<p><a href="#navigation">Top of the page</a></p>
