Add udated notes

--- a/HTML/Notes.html
+++ b/HTML/Notes.html
@@ -488,6 +488,28 @@
 						</footer>
 					</article>
 					<br>
+					<article class=""><!-- Animal trading cards notes -->
+						<header>
+							<h3>Animal trading cards:</h3>
+						</header>
+						<section class="notes">
+							<figure>
+								<img src="Cards.JPG" alt=cards width="600px">
+							</figure>	
+							<p>
+								I just submitted my project! I feel inspired and had a lot of fun with this project.<br><br>
+								I submitted one HTML file with 5 cards in them. Repeating the code in the HTML and 
+								adding just one line of code in the CSS made it easy to make multiple cards. It was 
+								almost like a template so now i can make all the animal trading cards i want. I even 
+								made one for Sam, the dog i watch every now and then.<br><br>
+								Check it out <a href="C:\Users\Brian Segers\Documents\Programming\Intro_to_Programming\CSS\animal-trading-cards-master\cards.html" target="_blank">here</a>
+							</p>
+						</section>
+						<footer>
+							<p></p>
+						</footer>
+					</article>
+					<br>
 					<article class=""><!-- notes -->
 						<header>
 							<h3></h3>
