Edit Cards margins

--- a/CSS/Felx.html
+++ b/CSS/Felx.html
@@ -12,5 +12,7 @@
       <div class="box black"></div>
       <div class="box red"></div>
     </div>
+  
+  <img src="https://picsum.photos/400">
   </body>
 </html>
