Edit link animal cards

--- a/HTML/Notes.html
+++ b/HTML/Notes.html
@@ -502,7 +502,7 @@
 								adding just one line of code in the CSS made it easy to make multiple cards. It was 
 								almost like a template so now i can make all the animal trading cards i want. I even 
 								made one for Sam, the dog i watch every now and then.<br><br>
-								Check it out <a href="C:\Users\Brian Segers\Documents\Programming\Intro_to_Programming\CSS\animal-trading-cards-master\cards.html" target="_blank">here</a>
+								Check it out <a href="https://briansegs.github.io/Animal-trading-cards/" target="_blank">here</a>
 							</p>
 						</section>
 						<footer>
