Edit link, card name, scr link

--- a/HTML/Notes.html
+++ b/HTML/Notes.html
@@ -488,13 +488,13 @@
 						</footer>
 					</article>
 					<br>
-					<article class=""><!-- Animal trading cards notes -->
+					<article class=""><!-- Animal Trading Cards notes -->
 						<header>
 							<h3>Animal trading cards:</h3>
 						</header>
 						<section class="notes">
 							<figure>
-								<img src="Cards.JPG" alt=cards width="600px">
+								<img src="cards.JPG" alt=cards width="600px">
 							</figure>	
 							<p>
 								I just submitted my project! I feel inspired and had a lot of fun with this project.<br><br>
